--- a/main.css
+++ b/main.css
@@ -15,25 +15,28 @@ html {
 }
 
 body {
-    background-color: rgb(235, 235, 240);
+    background-image: url(hinh-anh-background-dep-don-gian_102938083.jpg);
 }
 
 body.dark {
-    background-color: #333333;
+    background-image: url(hinh-nen-den-trang-dien-thoai-1.jpg);
     color: white;
+    z-index: -99;
 }
 
 header {
-    background-color: #49599a;
-    color: whitesmoke;
+    background-color: darkred;
+    color: white;
     height: 80px;
     position: relative;
+    top: 0;
+    z-index: 100;
 }
 
 header button {
     display: flex;
     justify-content: left;
-    background-color: #49599a;
+    background-color: brown;
     color: white;
     font-size: 20px;
 }
@@ -44,9 +47,9 @@ header h1 {
     line-height: 80px;
     padding-left: 50px;
     justify-content: left;
-    color: azure;
     position: relative;
     clear: left;
+    text-shadow: 2px 0px 5px brown;
 }
 
 header section {
@@ -60,6 +63,7 @@ header h3 {
     margin-top: 20px;
     margin-right: 20px;
     margin-bottom: 5px;
+    position: sticky;
 }
 
 header section p {
@@ -87,9 +91,13 @@ header section p {
 }
 
 #wrap {
-    height: 100%;
-    width: 100%;
-    padding-top: 3%;
+    display: block;
+    position: absolute;
+    margin-top: 3%;
+    margin-bottom: 3%;
+    top: 47.5%;
+    left: 50%;
+    transform: translateX(-50%) translateY(-50%);
 }
 
 #setup-game {
@@ -105,60 +113,87 @@ p#timer {
     font-size: 22px;
     font-weight: bold;
     text-align: center;
+    
 }
 
 p#lives {
-    font-size: 30px;
+    font-size: 20pt;
     font-weight: bold;
     text-align: center;
+    position: relative;
+    line-height: 80px;
+    
 }
 
 #game {
     display: flex;
     justify-content: center;
-
+    position: relative;
 }
 
 #number-container {
-    margin-top: 20px;
-    margin-left: 20px ;
+    position: absolute;
+    width: 250px;
+    top: 40%;
+    right: -65%;
+    z-index: 10;
+    transform: translateX(-50%) translateY(-50%);
 }
 
-#number-container>p {
-    border: 1px solid black;
-    border-radius: 20%;
-    width: 55px;
-    height: 55px;
+#number-container p {
+    border: 1px solid #49599a;
+    border-radius: 10%;
+    width: 80px;
+    height: 80px;
     font-size: 40pt;
-    margin: 5px auto 5px 0px;
     text-align: center;
+    float: left;
+    display: block;
+    line-height: 80px;
 }
 
-#board {
-    padding-top: 10px;
-    margin-top: 10px;
+#number-option button {
+    width: 80px;
+    height: 80px;
+    margin: 0;
+    padding: 0;
+}
+.pen-off {
+    background-image: url(158467734_1144706486040471_4698769863524688849_n.png);
+}
+.pen-on {
+    background-image: url(158292483_771467476722194_3564284464715627126_n.png);
+}
+.delete {
+    background-image: url(Capture.PNG);
+}
+#board {    
+    margin-top: auto;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
     align-content: flex-start;
-    width: 600px;
-    height: 600px;
-    position: relative;
+    width: 700px;
+    height: auto;
+    position: relative;    
+    justify-content: center;
 }
 
 .tile {
-    border: 1px solid black;
-    width: 60px;
-    height: 60px;
+    border: 1px solid darkred;
+    width: 70px;
+    height: 70px;
     text-align: center;
     margin: 0px;
+    line-height: 70px;
     vertical-align: middle;
     font-size: 40pt;
     position: relative;
+    z-index: 1;
 }
 
 p.selected {
-    background-color: lightblue;
+    background-color: darkgrey;
 }
 
 p.incorrect {
@@ -166,419 +201,44 @@ p.incorrect {
 }
 
 .rightBorder {
-    border-right: 4px solid black;
+    border-right: 5px solid brown;
+    z-index: 10;
+}
+
+.leftBorder {
+    border-left: 5px solid brown;
+    z-index: 10;
+}
+
+.topBorder {
+    border-top: 5px solid brown;
+    z-index: 10;
 }
 
 .bottomBorder {
-    border-bottom: 4px solid black;
+    border-bottom: 5px solid brown;
+    z-index: 10;
 }
 
 footer {
-    background-color: #49599a;
+    background-color: dimgray;
     text-align: center;
-    line-height: 50px;
-    color: aliceblue;
+    line-height: 40px;
+    color: whitesmoke;
     position: absolute;
     bottom: 0;
     left: 0;
     right: 0;
-    height: 50px;
+    height: 40px;
     font-size: 18px;
+    z-index: -1;
+    opacity: 0.7;
 }
 
 /* Dành cho điện thoại */
 
-@media all and (min-width: 200px) and (max-width: 320px) {
-    * {
-        margin: 0;
-        padding: 0;
-    }
-
-    html {
-        position: relative;
-        min-height: 100%;
-        font-size: 6px;
-    }
 
 
-    .hidden {
-        display: none;
-    }
-
-    body {
-        background-color: rgb(235, 235, 240);
-    }
-
-    body.dark {
-        background-color: #333333;
-        color: white;
-    }
-
-    header {
-        background-color: #49599a;
-        color: whitesmoke;
-        height: 40px;
-        position: relative;
-    }
-
-    header button {
-        display: flex;
-        justify-content: left;
-        background-color: #49599a;
-        color: white;
-        font-size: 8px;
-    }
-
-    header h1 {
-        display: inline-block;
-        font-size: 14pt;
-        line-height: 40px;
-        padding-left: 10px;
-        justify-content: left;
-        color: azure;
-        position: relative;
-        clear: left;
-    }
-
-    header section {
-        justify-content: center;
-        position: relative;
-    }
-
-    header h3 {
-        justify-content: left;
-        padding: 0;
-        margin-top: 10px;
-        margin-right: 10px;
-        margin-bottom: 3px;
-    }
-
-    header section p {
-        margin-right: 15px;
-    }
-
-    .btn-pause {
-        box-sizing: border-box;
-        border-width: 5px 0px 5px 8px;
-        border-color: transparent transparent transparent #202020;
-        margin-left: 16px;
-        width: 10px;
-        height: 8px;
-    }
-
-    .btn-play {
-        border-left: 3px solid white;
-        border-right: 3px solid white;
-        border-bottom: 0;
-        border-top: 0;
-        display: block;
-        width: 8px;
-        height: 8px;
-        margin-left: 16px;
-    }
-
-    header input {
-        width: 6px;
-        height: 6px;
-    }
-
-    #wrap {
-        height: 100%;
-        width: 100%;
-        padding-top: 15px;
-        padding-bottom: 35px;
-        padding-top: 30%;
-    }
-
-    #setup-game {
-        display: flex;
-        float: right;
-    }
-
-    button {
-        justify-self: center;
-    }
-
-    p#timer {
-        font-size: 8px;
-        font-weight: bold;
-        text-align: center;
-
-    }
-
-    p#lives {
-        font-size: 10px;
-        font-weight: bold;
-        text-align: center;
-    }
-
-    #game {
-        display: flex;
-        justify-content: center;
-
-    }
-
-    #number-container {
-        margin-top: 10px;
-        margin-right: auto;
-        margin-left: 0;
-    }
-
-    #number-container>p {
-        border: 1px solid black;
-        border-radius: 20%;
-        width: 17px;
-        height: 17px;
-        font-size: 16pt;
-        margin: 3px 15px 3px 0px;
-        text-align: center;
-    }
-
-    #board {
-        padding: auto;
-        margin: auto;
-        display: flex;
-        flex-wrap: wrap;
-        justify-content: center;
-        align-content: flex-start;
-        width: 220px;
-        height: 220px;
-        position: relative;
-    }
-
-    .tile {
-        border: 1px solid black;
-        width: 20px;
-        height: 20px;
-        text-align: center;
-        margin: 0px;
-        vertical-align: middle;
-        font-size: 14pt;
-        position: relative;
-    }
-
-    p.selected {
-        background-color: lightblue;
-    }
-
-    p.incorrect {
-        color: red;
-    }
-
-    .rightBorder {
-        border-right: 3px solid black;
-    }
-
-    .bottomBorder {
-        border-bottom: 3px solid black;
-    }
-
-    footer {
-        background-color: #49599a;
-        text-align: center;
-        line-height: 20px;
-        color: aliceblue;
-        position: absolute;
-        bottom: 0;
-        left: 0;
-        right: 0;
-        height: 20px;
-        font-size: 7px;
-    }
-}
-
-@media all and (min-width: 320px) and (max-width: 600px) {
-    * {
-        margin: 0;
-        padding: 0;
-    }
-
-    html {
-        position: relative;
-        min-height: 100%;
-        font-size: 7px;
-    }
-
-
-    .hidden {
-        display: none;
-    }
-
-    body {
-        background-color: rgb(235, 235, 240);
-    }
-
-    body.dark {
-        background-color: #333333;
-        color: white;
-    }
-
-    header {
-        background-color: #49599a;
-        color: whitesmoke;
-        height: 40px;
-        position: relative;
-    }
-
-    header button {
-        display: flex;
-        justify-content: left;
-        background-color: #49599a;
-        color: white;
-        font-size: 8px;
-    }
-
-    header h1 {
-        display: inline-block;
-        font-size: 14pt;
-        line-height: 40px;
-        padding-left: 10px;
-        justify-content: left;
-        color: azure;
-        position: relative;
-        clear: left;
-    }
-
-    header section {
-        justify-content: center;
-        position: relative;
-    }
-
-    header h3 {
-        justify-content: left;
-        padding: 0;
-        margin-top: 10px;
-        margin-right: 10px;
-        margin-bottom: 3px;
-    }
-
-    header section p {
-        margin-right: 15px;
-    }
-
-    .btn-pause {
-        box-sizing: border-box;
-        border-width: 5px 0px 5px 8px;
-        border-color: transparent transparent transparent #202020;
-        margin-left: 16px;
-        width: 10px;
-        height: 8px;
-    }
-
-    .btn-play {
-        border-left: 3px solid white;
-        border-right: 3px solid white;
-        border-bottom: 0;
-        border-top: 0;
-        display: block;
-        width: 8px;
-        height: 8px;
-        margin-left: 16px;
-    }
-
-    header input {
-        width: 8px;
-        height: 8px;
-    }
-
-    #wrap {
-        height: 100%;
-        width: 100%;
-        padding-top: 30%;
-        padding-bottom: 35px;
-    }
-
-    #setup-game {
-        display: flex;
-        float: right;
-    }
-
-    button {
-        justify-self: center;
-    }
-
-    p#timer,
-    p#lives {
-        font-size: 11px;
-        font-weight: bold;
-        text-align: center;
-    }
-
-    #game {
-        display: flex;
-        justify-content: center;
-
-    }
-
-    #number-container {
-        margin-top: 10px;
-        margin-right: auto;
-        margin-left: 0;
-    }
-
-    #number-container>p {
-        border: 1px solid black;
-        border-radius: 20%;
-        width: 18px;
-        height: 18px;
-        font-size: 16pt;
-        margin: 3px auto 3px 0px;
-        text-align: center;
-    }
-
-    #board {
-        padding: auto;
-        margin: auto;
-        display: flex;
-        flex-wrap: wrap;
-        justify-content: center;
-        align-content: flex-start;
-        width: 250px;
-        height: 250px;
-        position: relative;
-    }
-
-    .tile {
-        border: 1px solid black;
-        width: 25px;
-        height: 25px;
-        text-align: center;
-        margin: 0px;
-        vertical-align: middle;
-        font-size: 16pt;
-        position: relative;
-    }
-
-    p.selected {
-        background-color: lightblue;
-    }
-
-    p.incorrect {
-        color: red;
-    }
-
-    .rightBorder {
-        border-right: 3px solid black;
-    }
-
-    .bottomBorder {
-        border-bottom: 3px solid black;
-    }
-
-    footer {
-        background-color: #49599a;
-        text-align: center;
-        line-height: 20px;
-        color: aliceblue;
-        position: absolute;
-        bottom: 0;
-        left: 0;
-        right: 0;
-        height: 20px;
-        font-size: 7px;
-    }
-
-}
 
 
 
