--- a/main.css
+++ b/main.css
@@ -6,6 +6,7 @@
 html {
     position: relative;
     min-height: 100%;
+    max-height: fit-content;
     font-size: 15px;
 }
 
@@ -54,13 +55,19 @@ header h1 {
     padding-left: 30px;
     justify-content: left;
     position: relative;
-    clear: left;
     text-shadow: 2px 0px 5px brown;
 }
 
 header section {
     justify-content: center;
-    position: relative;
+    position: relative;    
+}
+
+#section-lives{
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translateX(-50%) translateY(-50%);
 }
 
 header h3 {
@@ -165,7 +172,7 @@ p#lives {
 
 #number-container button:hover {
     opacity: 0.5;
-    cursor: pointer;
+    cursor: pointer;    
 }
 
 #number-option button {
@@ -256,8 +263,9 @@ footer {
     right: 0;
     height: 40px;
     font-size: 18px;
-    z-index: -1;
+    z-index: 1;
     opacity: 0.7;
+    margin-top: 50px;
 }
 
 /* Dành cho điện thoại */
